force-app/main/default/objects/Game_Quote__c/Game_Quote__c.object-meta.xml
<CustomObject>
    <label>Game Quote (Old)</label>
    <nameField>
        <label>Game Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Game Quotes (Old)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>