force-app/main/default/objects/Game_Quote__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>A link to the account that this game quote&apos;s opportunity belongs to</description>
    <formula>HYPERLINK(&quot;https://ap8.salesforce.com/&quot; +  Opportunity__r.Account.Id ,  Opportunity__r.Account.Name)</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>