force-app/main/default/objects/Game_Quote__c/fields/Account_Email_New__c.field-meta.xml
<CustomField>
    <fullName>Account_Email_New__c</fullName>
    <formula>Opportunity__r.Account_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Email New</label>
    <type>Text</type>
</CustomField>