force-app/main/default/objects/Game_Quote__c/fields/Additional_charge_s_1__c.field-meta.xml
<CustomField>
    <fullName>Additional_charge_s_1__c</fullName>
    <description>Additional charges that apply to order</description>
    <label>Additional Charge(s)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>