force-app/main/default/objects/Game_Quote__c/fields/Amazon_Diamond__c.field-meta.xml
<CustomField>
    <fullName>Amazon_Diamond__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not the customer is shipping any portion of their order direct to Diamond Dist. or Amazon.com</description>
    <inlineHelpText>Indicates whether or not the customer is shipping any portion of their order direct to Diamond Dist. or Amazon.com</inlineHelpText>
    <label>Amazon/Diamond</label>
    <type>Checkbox</type>
</CustomField>