force-app/main/default/objects/Game_Quote__c/fields/Assembly_Cost_2__c.field-meta.xml
<CustomField>
    <fullName>Assembly_Cost_2__c</fullName>
    <description>Cost of assembling Quantity 2</description>
    <inlineHelpText>Cost of assembling Quantity 2</inlineHelpText>
    <label>Assembly Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>