force-app/main/default/objects/Game_Quote__c/fields/Display_Quantity_1__c.field-meta.xml
<CustomField>
    <fullName>Display_Quantity_1__c</fullName>
    <description>Order quantity (before overruns are added)</description>
    <label>Order Quantity (Q1)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>