force-app/main/default/objects/Game_Quote__c/fields/Expedited_Freight_2__c.field-meta.xml
<CustomField>
    <fullName>Expedited_Freight_2__c</fullName>
    <description>Cost (pre-markup) of expedited portion of shipping</description>
    <label>Expedited Freight Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>