force-app/main/default/objects/Game_Quote__c/fields/Expedited_Freight_Markup_i2__c.field-meta.xml
<CustomField>
    <fullName>Expedited_Freight_Markup_i2__c</fullName>
    <description>Markup (percentage) to be added to order&apos;s related expedited freight costs</description>
    <label>Expedited Freight Markup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>