force-app/main/default/objects/Game_Quote__c/fields/Expedited_Freight_Price2__c.field-meta.xml
<CustomField>
    <fullName>Expedited_Freight_Price2__c</fullName>
    <description>Final price of expedited freight</description>
    <formula>Expedited_Freight_2__c * ( 1 + Expedited_Freight_Markup_i2__c )</formula>
    <label>Expedited Freight Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>