force-app/main/default/objects/Game_Quote__c/fields/Expedited_Quantity_2__c.field-meta.xml
<CustomField>
    <fullName>Expedited_Quantity_2__c</fullName>
    <description>Quantity of order that should be shipped via expedited shipping</description>
    <label>Expedited Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>