force-app/main/default/objects/Game_Quote__c/fields/gq_2pcbox_additionalinfo_1__c.field-meta.xml
<CustomField>
    <fullName>gq_2pcbox_additionalinfo_1__c</fullName>
    <description>Additional 2 piece box info</description>
    <label>Additional Info</label>
    <type>TextArea</type>
</CustomField>