force-app/main/default/objects/Game_Quote__c/fields/gq_2pcbox_componentprice_q2_1__c.field-meta.xml
<CustomField>
    <fullName>gq_2pcbox_componentprice_q2_1__c</fullName>
    <description>Final price (post-markup) of component for Q2</description>
    <formula>((1 + Product_Purchase_Markup2__c) * gq_2pcbox_componentpurchasecost_q2_1__c)</formula>
    <inlineHelpText>Final price (post-markup) of component for Q2</inlineHelpText>
    <label>Price (Q2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>