force-app/main/default/objects/Game_Quote__c/fields/gq_2pcbox_componentpurchasecost_q1_1__c.field-meta.xml
<CustomField>
    <fullName>gq_2pcbox_componentpurchasecost_q1_1__c</fullName>
    <description>Purchase cost (pre-markup) of component for Q1</description>
    <inlineHelpText>Purchase cost (pre-markup) of component for Q1</inlineHelpText>
    <label>Purchase Cost (Q1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>