force-app/main/default/objects/Game_Quote__c/fields/gq_2pcbox_height_1__c.field-meta.xml
<CustomField>
    <fullName>gq_2pcbox_height_1__c</fullName>
    <description>Width of 2 piece box dimensions in inches.</description>
    <inlineHelpText>Width of 2 piece box in inches</inlineHelpText>
    <label>Height</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>