force-app/main/default/objects/Game_Quote__c/fields/gq_2pcbox_length_1__c.field-meta.xml
<CustomField>
    <fullName>gq_2pcbox_length_1__c</fullName>
    <description>Length of 2 piece box dimensions in inches</description>
    <inlineHelpText>Length of 2 piece box in inches</inlineHelpText>
    <label>Length</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>