force-app/main/default/objects/Game_Quote__c/fields/gq_2pcbox_material_1__c.field-meta.xml
<CustomField>
    <fullName>gq_2pcbox_material_1__c</fullName>
    <description>2 piece box material</description>
    <inlineHelpText>Note material in &quot;Additional Info&quot; if &quot;Other&quot; is selected</inlineHelpText>
    <label>Material</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1.5mm High Density Paperboard (standard)</fullName>
            </value>
            <value>
                <fullName>2mm High Density Paperboard</fullName>
            </value>
            <value>
                <fullName>Tin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>