force-app/main/default/objects/Game_Quote__c/fields/gq_2pcbox_printingoptions_1__c.field-meta.xml
<CustomField>
    <fullName>gq_2pcbox_printingoptions_1__c</fullName>
    <description>Printing options for 2 piece box</description>
    <label>Printing Options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Black &amp; White</fullName>
            </value>
            <value>
                <fullName>Full CMYK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>