force-app/main/default/objects/Game_Quote__c/fields/gq_2pcbox_specialtyoptions_1__c.field-meta.xml
<CustomField>
    <fullName>gq_2pcbox_specialtyoptions_1__c</fullName>
    <description>2 piece box add-ons</description>
    <label>Specialty Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shrink Wrap Cards</fullName>
            </value>
            <value>
                <fullName>Shrink Wrap Box</fullName>
            </value>
            <value>
                <fullName>Shrink Wrap Pull Tab</fullName>
            </value>
            <value>
                <fullName>Deboss</fullName>
            </value>
            <value>
                <fullName>Emboss</fullName>
            </value>
            <value>
                <fullName>Foil Stamp</fullName>
            </value>
            <value>
                <fullName>Magnetic Box Closure</fullName>
            </value>
            <value>
                <fullName>Metallic Ink</fullName>
            </value>
            <value>
                <fullName>Printed Inner Box Liner</fullName>
            </value>
            <value>
                <fullName>Spot UV</fullName>
            </value>
            <value>
                <fullName>Thumb Cut</fullName>
            </value>
            <value>
                <fullName>Variant Box Art</fullName>
            </value>
            <value>
                <fullName>Linen Texture</fullName>
            </value>
            <value>
                <fullName>Plastic Hang Tab</fullName>
            </value>
            <value>
                <fullName>Spot Color Matching</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>