force-app/main/default/objects/Game_Quote__c/fields/gq_bags_additionalinfo_1__c.field-meta.xml
<CustomField>
    <fullName>gq_bags_additionalinfo_1__c</fullName>
    <description>Additional info for cloth or plastic bags</description>
    <label>Additional Info</label>
    <type>TextArea</type>
</CustomField>