force-app/main/default/objects/Game_Quote__c/fields/gq_bags_drawstrings_1__c.field-meta.xml
<CustomField>
    <fullName>gq_bags_drawstrings_1__c</fullName>
    <description>Number of drawstrings for cloth bags</description>
    <inlineHelpText>For cloth bags only</inlineHelpText>
    <label># of Drawstrings</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>