force-app/main/default/objects/Game_Quote__c/fields/gq_bags_material_1__c.field-meta.xml
<CustomField>
    <fullName>gq_bags_material_1__c</fullName>
    <description>Material of cloth or plastic bags</description>
    <label>Material</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plastic Zip Lock</fullName>
            </value>
            <value>
                <fullName>Faux Velvet</fullName>
            </value>
            <value>
                <fullName>Linen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>