force-app/main/default/objects/Game_Quote__c/fields/gq_bags_size_1__c.field-meta.xml
<CustomField>
    <fullName>gq_bags_size_1__c</fullName>
    <description>Size of cloth or plastic bags</description>
    <inlineHelpText>See &quot;Additional Info&quot; if &quot;Custom&quot; is selected</inlineHelpText>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Extra Small (Approx. 3&quot; x 4&quot;)</fullName>
            </value>
            <value>
                <fullName>Card Size (Approx. 3.5&quot; x 5&quot;)</fullName>
            </value>
            <value>
                <fullName>Small (Approx. 4&quot; x 5&quot;)</fullName>
            </value>
            <value>
                <fullName>Medium (Approx. 4&quot; x 6&quot;)</fullName>
            </value>
            <value>
                <fullName>Large (Approx. 6&quot; x 8&quot;)</fullName>
            </value>
            <value>
                <fullName>Extra Large (Approx. 6&quot; x 9&quot;)</fullName>
            </value>
            <value>
                <fullName>Custom (Cloth Only - See &quot;Additional Info&quot;)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>