force-app/main/default/objects/Game_Quote__c/fields/gq_bags_specialtyoptions_1__c.field-meta.xml
<CustomField>
    <fullName>gq_bags_specialtyoptions_1__c</fullName>
    <description>Specialty options for cloth bags</description>
    <inlineHelpText>For cloth bags only</inlineHelpText>
    <label>Specialty Options</label>
    <type>TextArea</type>
</CustomField>