force-app/main/default/objects/Game_Quote__c/fields/gq_cards_additionalinfo_1__c.field-meta.xml
<CustomField>
    <fullName>gq_cards_additionalinfo_1__c</fullName>
    <description>Additional info for cards and card packaging</description>
    <inlineHelpText>Additional info for cards and card packaging</inlineHelpText>
    <label>Additional Info</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>