force-app/main/default/objects/Game_Quote__c/fields/gq_cards_additionalinfo_2__c.field-meta.xml
<CustomField>
    <fullName>gq_cards_additionalinfo_2__c</fullName>
    <description>Additional info for cards and card packaging</description>
    <label>Additional Info</label>
    <type>TextArea</type>
</CustomField>