force-app/main/default/objects/Game_Quote__c/fields/gq_cards_componentprice_q1_3__c.field-meta.xml
<CustomField>
    <fullName>gq_cards_componentprice_q1_3__c</fullName>
    <description>Final price (post-markup) of component for Q1</description>
    <formula>((1 + Product_Purchase_Markup1__c) * gq_cards_componentpurchasecost_q1_3__c)</formula>
    <inlineHelpText>Final price (post-markup) of component for Q1</inlineHelpText>
    <label>Price (Q1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>