force-app/main/default/objects/Game_Quote__c/fields/gq_cards_finishstyle_2__c.field-meta.xml
<CustomField>
    <fullName>gq_cards_finishstyle_2__c</fullName>
    <description>Finish style of second deck of playing cards</description>
    <label>Finish Style</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gloss</fullName>
            </value>
            <value>
                <fullName>Matte</fullName>
            </value>
            <value>
                <fullName>Matte (Anti-Scratch)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>