force-app/main/default/objects/Game_Quote__c/fields/gq_cards_finishtype_3__c.field-meta.xml
<CustomField>
    <fullName>gq_cards_finishtype_3__c</fullName>
    <description>Finish type of third deck of playing cards</description>
    <label>Finish Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Varnish</fullName>
            </value>
            <value>
                <fullName>Lamination (water resistant)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>