force-app/main/default/objects/Game_Quote__c/fields/gq_cards_lengthcustom_1__c.field-meta.xml
<CustomField>
    <fullName>gq_cards_lengthcustom_1__c</fullName>
    <description>Length, in inches, of custom trim size for playing cards</description>
    <inlineHelpText>Ciustom length in inches</inlineHelpText>
    <label>Card Length (custom)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>