force-app/main/default/objects/Game_Quote__c/fields/gq_cards_lengthcustom_3__c.field-meta.xml
<CustomField>
    <fullName>gq_cards_lengthcustom_3__c</fullName>
    <description>Custom length, in inches, for third deck of playing cards</description>
    <inlineHelpText>Custom length, in inches, for third deck of playing cards</inlineHelpText>
    <label>Card Length (custom)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>