force-app/main/default/objects/Game_Quote__c/fields/gq_cards_material_2__c.field-meta.xml
<CustomField>
    <fullName>gq_cards_material_2__c</fullName>
    <description>Material of second deck of playing cards</description>
    <label>Card Material</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>300 gsm Blue Core</fullName>
            </value>
            <value>
                <fullName>300 gsm Foil Stock</fullName>
            </value>
            <value>
                <fullName>330 gsm Black Core</fullName>
            </value>
            <value>
                <fullName>350 gsm Coreless</fullName>
            </value>
            <value>
                <fullName>Clear PVC Plastic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>